environments/kc-dev/apps/refarch-kc-order-cmd-ms/services/refarch-kc-order-cmd-ms/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: refarch-kc-order-cmd-ms
    app.kubernetes.io/part-of: app-refarch-kc-order-cmd-ms
  name: refarch-kc-order-cmd-ms
  namespace: kc-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: refarch-kc-order-cmd-ms
      app.kubernetes.io/part-of: app-refarch-kc-order-cmd-ms
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: refarch-kc-order-cmd-ms
        app.kubernetes.io/part-of: app-refarch-kc-order-cmd-ms
    spec:
      containers:
      - command:
            - java
            - -Dquarkus.http.host=0.0.0.0
            - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
            - -jar
            - /deployments/quarkus-run.jar
      - image: quay.io/jbcodeforce/refarch-kc-order-cmd-ms
        imagePullPolicy: Always
        name: refarch-kc-order-cmd-ms
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
      serviceAccountName: refarch-kc-order-cmd-ms
status: {}
