environments/kc-dev/apps/refarch-kc-order-cmd-ms/services/refarch-kc-order-cmd-ms/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: refarch-kc-order-cmd-ms
    app.kubernetes.io/part-of: app-refarch-kc-order-cmd-ms
  name: refarch-kc-order-cmd-ms
  namespace: kc-dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: refarch-kc-order-cmd-ms
    app.kubernetes.io/part-of: app-refarch-kc-order-cmd-ms
  type: ClusterIP
status:
  loadBalancer: {}
