environments/kc-dev/apps/refarch-kc-order-cmd-ms/services/refarch-kc-order-cmd-ms/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: refarch-kc-order-cmd-ms
  namespace: kc-dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: refarch-kc-order-cmd-ms
    weight: 100
  wildcardPolicy: None
